Added twitter contact

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li class="website"><i class="fa fa-globe"></i><a href="http://garu.pizza/" target="_blank">garu.pizza</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/tommaso-garuglieri-944880105/" target="_blank">linkedin</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="http://github.com/GaruGaru/" target="_blank">github.com/GaruGaru</a></li>
-                   <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li> !-->
+                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/GarulloBot" target="_blank">@GarulloBot</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
