--- a/index.html
+++ b/index.html
@@ -47,33 +47,29 @@
             </div><!--//contact-container-->
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
+
                 <div class="item">
-                    <h4 class="degree">MSc in Computer Science</h4>
-                    <h5 class="meta">University of London</h5>
-                    <div class="time">2011 - 2012</div>
+                    <h4 class="degree">Computer Science</h4>
+                    <h5 class="meta">IS GobettiVolta</h5>
+                    <div class="time">2010 - 2015</div>
                 </div><!--//item-->
-                <div class="item">
-                    <h4 class="degree">BSc in Applied Mathematics</h4>
-                    <h5 class="meta">Bristol University</h5>
-                    <div class="time">2007 - 2011</div>
-                </div><!--//item-->
+
             </div><!--//education-container-->
 
             <div class="languages-container container-block">
                 <h2 class="container-block-title">Languages</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>English <span class="lang-desc">(Native)</span></li>
-                    <li>French <span class="lang-desc">(Professional)</span></li>
-                    <li>Spanish <span class="lang-desc">(Professional)</span></li>
+                    <li>English <span class="lang-desc">(Professional)</span></li>
+                    <li>Italian <span class="lang-desc">(Native)</span></li>
                 </ul>
             </div><!--//interests-->
 
             <div class="interests-container container-block">
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Climbing</li>
-                    <li>Snowboarding</li>
-                    <li>Cooking</li>
+                    <li>Guitar</li>
+                    <li>Soccer</li>
+                    <li>Tech</li>
                 </ul>
             </div><!--//interests-->
 
