Added work experiences

--- a/index.html
+++ b/index.html
@@ -100,12 +100,27 @@
                     <div class="details">
                         <p>In Instal i've worked as android developer, my work as android dev. was focused mainly on the proprietary sdk development</p>
 
-                        <p>As Java Developer i've worked with apache storm with hbase in order to archive high performance real data processing</p>
+                        <p>As Java Developer i've worked with <b>apache storm</b> with <b>hbase</b> in order to archive high performance real data processing</p>
 
-                        <p>During my experience in Instal i've matured experience also with the devops stack working with chef (infrastructure as code), Docker (container engine), Kubernetes for production container orchestration and Sensu for monitoring and alerting system</p>
+                        <p>During my experience in Instal i've matured experience also with the devops stack working with <b>chef (infrastructure as code)</b>, <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system</p>
 
                     </div><!--//details-->
                 </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Android Course Teacher</h3>
+                            <div class="time">2016 - 2017</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Is Gobetti Volta</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Teacher in a free android developing course for high school students hosted by Is Gobetti Volta</p>
+
+                    </div><!--//details-->
+                </div><!--//item-->
+
 
                 <div class="item">
                     <div class="meta">
