--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                         <p>As Java Developer i've worked with <b>apache storm</b> with <b>hbase</b> in order to archive high performance real data processing</p>
 
-                        <p>During my experience in Instal i've matured experience also with the devops stack working with <b>chef (infrastructure as code)</b>, <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system</p>
+                        <p>During my experience in Instal i've matured experience also with the devops stack working with <b>chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system</p>
 
                     </div><!--//details-->
                 </div><!--//item-->
