--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                         <p>As Java Developer i've worked with <b>apache storm</b> with <b>hbase</b> in order to archive high performance real data processing</p>
 
-                        <p>During my experience in Instal i've matured experience also with the devops stack working with <b>chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system</p>
+                        <p>During my experience in Instal i've matured experience also with the devops stack working with <b>Chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system</p>
 
                     </div><!--//details-->
                 </div><!--//item-->
@@ -116,7 +116,7 @@
                         <div class="company">Is Gobetti Volta</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Teacher in a free android developing course for high school students hosted by Is Gobetti Volta</p>
+                        <p>Teacher in a free android developing course for high school students hosted by IS Gobetti Volta</p>
 
                     </div><!--//details-->
                 </div><!--//item-->
