--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="company">Instal, Florence</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>In Instal i've worked as android developer, my work as android dev. was focused mainly on the proprietary sdk development</p>
+                        <p>In Instal i've worked as android developer, my work as android dev. was focused mainly on the proprietary <b>sdk development</b></p>
 
                         <p>As Java Developer i've worked with <b>apache storm</b> with <b>hbase</b> in order to archive high performance real data processing</p>
 
@@ -142,10 +142,10 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
-                    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+                    <p>Personal side projects.</p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
+                    <span class="project-title"><a href="http://github.com/GaruGaru/confy">Confy</a></span> - <span class="project-tagline">Easy, fluent, typesafe, container ready java configurations</span>
 
                 </div><!--//item-->
                 <div class="item">
