--- a/index.html
+++ b/index.html
@@ -149,18 +149,22 @@
 
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">DevStudio</a></span> -
-                    <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
+                    <span class="project-title"><a href="https://github.com/GaruGaru/Rssy" target="_blank">Rssy</a></span> -
+                    <span class="project-tagline">Java blazing fast, (kinda ugly), spark-based rss aggregator with redis as cache</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>
+                    <span class="project-title"><a href="https://github.com/GaruGaru/PioveDomaniAdImpruneta" target="_blank">Piove Domani ad Impruneta?</a></span> - <span class="project-tagline">Minimal and.. very specific weather android app with Dagger2, RxJava2, Retrofit and MVP architecture</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="hhttp://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>
+                    <span class="project-title"><a href="https://play.google.com/store/apps/details?id=modularity.howlongago" target="_blank">How long ago</a></span> - <span class="project-tagline">Android application that reminds you how long ago you did something</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>
+                    <span class="project-title"><a href="https://play.google.com/store/apps/details?id=modularity.coderdojoevents" target="_blank">CoderDojo Events</a></span> - <span class="project-tagline">Event brite based android applications that allows users to find nearby coderdojos</span>
                 </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="https://github.com/GaruGaru/Rabbify" target="_blank">Rabbify</a></span> - <span class="project-tagline">Java fluent RabbitMQ consumer/publisher api</span>
+                </div><!--//item-->
+
             </section><!--//section-->
 
             <section class="skills-section section">
