--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
                 <div class="skillset">
                     <div class="item">
-                        <h3 class="level-title">Python &amp; Django</h3>
+                        <h3 class="level-title">Android</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>
@@ -179,7 +179,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Javascript &amp; jQuery</h3>
+                        <h3 class="level-title">Java</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>
@@ -187,7 +187,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Angular</h3>
+                        <h3 class="level-title">Python</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>
@@ -195,23 +195,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">HTML5 &amp; CSS</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Ruby on Rails</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Sketch &amp; Photoshop</h3>
+                        <h3 class="level-title">Kotlin</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="60%">
                             </div>
