--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/GaruGaru/Rabbify" target="_blank">Rabbify</a></span> - <span class="project-tagline">Java fluent RabbitMQ consumer/publisher api</span>
                 </div><!--//item-->
-
+                <div class="item">
+                    <span class="project-title"><a href="https://github.com/GaruGaru/Sockfy" target="_blank">Sockfy</a></span> - <span class="project-tagline">Fluent, modular, multithreaded server socket library written in java</span>
+                </div><!--//item-->
             </section><!--//section-->
 
             <section class="skills-section section">
