--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
                     <li>Guitar</li>
-                    <li>Soccer</li>
+                    <li>Sport</li>
                     <li>Tech</li>
                 </ul>
             </div><!--//interests-->
