--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                         <div class="company">Instal, Florence</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>In Instal i've worked as android developer, my work as android dev. was focused mainly on the proprietary <b>sdk development</b></p>
+                        <p>In Instal i've worked as an android developer, my work was mainly focused mainly on the proprietary <b>sdk development</b></p>
 
                         <p>As Java Developer i've worked with <b>apache storm</b> with <b>hbase</b> in order to archive high performance real data processing</p>
 
-                        <p>During my experience in Instal i've matured experience also with the devops stack working with <b>Chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system</p>
+                        <p>During my experience in Instal i've gained experience also with the devops stack working with <b>Chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system</p>
 
                     </div><!--//details-->
                 </div><!--//item-->
