Added besiege to projects

--- a/index.html
+++ b/index.html
@@ -145,8 +145,11 @@
                     <p>Personal side projects.</p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="http://github.com/GaruGaru/confy">Confy</a></span> - <span class="project-tagline">Easy, fluent, typesafe, container ready java configurations</span>
+                    <span class="project-title"><a href="http://github.com/GaruGaru/BeSiege">BeSiege</a></span> - <span class="project-tagline">BeSiege - Siege inspired http load tester written in Go</span>
+                </div><!--//item-->
 
+                <div class="item">
+                    <span class="project-title"><a href="http://github.com/GaruGaru/confy">Confy</a></span> - <span class="project-tagline">Easy, fluent, typesafe, container ready java configurations</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/GaruGaru/Rssy" target="_blank">Rssy</a></span> -
@@ -224,5 +227,4 @@
     <!-- custom js -->
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
-</html> 
-
+</html>
