--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="company">Instal, Florence</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>In Instal i've worked as an android developer, my work was mainly focused mainly on the proprietary <b>sdk development</b></p>
+                        <p>In Instal i've worked as an android developer, my work was focused mainly on the proprietary <b>sdk development</b></p>
 
                         <p>As Java Developer i've worked with <b>apache storm</b> with <b>hbase</b> in order to archive high performance real data processing</p>
 
