--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <p>Personal side projects.</p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="http://github.com/GaruGaru/BeSiege">BeSiege</a></span> - <span class="project-tagline">BeSiege - Siege inspired http load tester written in Go</span>
+                    <span class="project-title"><a href="http://github.com/GaruGaru/BeSiege">BeSiege</a></span> - <span class="project-tagline">Siege inspired http load tester written in Go</span>
                 </div><!--//item-->
 
                 <div class="item">
