--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile_face.png" alt="" />
                 <h1 class="name">Tommaso Garuglieri</h1>
-                <h3 class="tagline">DevOps - Android Developer</h3>
+                <h3 class="tagline">DevOps<br>Android Developer</h3>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
