--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
+      <![endif]-->
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile_face.png" alt="" />
                 <h1 class="name">Tommaso Garuglieri</h1>
-                <h3 class="tagline">DevOps<br>Android Developer</h3>
+                <h3 class="tagline">Backend Developer<br>DevOps<br>Android Developer</h3>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -144,6 +144,15 @@
                 <div class="intro">
                     <p>Personal side projects.</p>
                 </div><!--//intro-->
+
+                <div class="item">
+                    <span class="project-title"><a href="https://github.com/GaruGaru/today-garbage-impruneta">Today Garbage Impruneta</a></span> - <span class="project-tagline">App that show garbage removal schedule for the current day using firebase remote config</span>
+                </div><!--//item-->
+
+                <div class="item">
+                    <span class="project-title"><a href="https://github.com/GaruGaru/fail2statsd">Fail2Statsd</a></span> - <span class="project-tagline">   Dockerized, lightweight, swarm-ready fail2ban log monitor for statsd written in Golang</span>
+                </div><!--//item-->
+
                 <div class="item">
                     <span class="project-title"><a href="http://github.com/GaruGaru/BeSiege">BeSiege</a></span> - <span class="project-tagline">Siege inspired http load tester written in Go</span>
                 </div><!--//item-->
@@ -216,8 +225,8 @@
 
     <footer class="footer">
         <div class="text-center">
-                <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-                <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+            <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
+            <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
         </div><!--//container-->
     </footer><!--//footer-->
 
