--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-  </head>
+  <![endif]-->
+</head>
 
-  <body>
+<body>
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
@@ -194,6 +194,14 @@
                     </div><!--//item-->
 
                     <div class="item">
+                        <h3 class="level-title">Kotlin</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="60%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
                         <h3 class="level-title">Android</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
@@ -210,14 +218,14 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Kotlin</h3>
+                        <h3 class="level-title">GoLang</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="60%">
+                            <div class="level-bar-inner" data-level="40%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
                 </div>
+                
             </section><!--//skills-section-->
 
         </div><!--//main-body-->
