--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
-                    <p>Personal side projects.</p>
+                    <p>Personal projects.</p>
                 </div><!--//intro-->
 
                 <div class="item">
@@ -224,6 +224,8 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
+
+
                 </div>
                 
             </section><!--//skills-section-->
