--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <h3 class="job-title">Android Course Teacher</h3>
                             <div class="time">2016 - 2017</div>
                         </div><!--//upper-row-->
-                        <div class="company">Is Gobetti Volta</div>
+                        <div class="company">IS Gobetti Volta</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Teacher in a free android developing course for high school students hosted by IS Gobetti Volta</p>
