Updated personal projects

--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
                 </div><!--//intro-->
 
                 <div class="item">
+                    <span class="project-title"><a href="https://github.com/GaruGaru/gearpump-swarm">Gearpump Swarm</a></span> - <span class="project-tagline">Run and Scale Apache Gearpump on a docker swarm cluster effortlessly</span>
+                </div><!--//item-->      
+
+                <div class="item">
+                    <span class="project-title"><a href="http://github.com/GaruGaru/confy2">Confy2</a></span> - <span class="project-tagline">Easy, fluent, typesafe, container ready java configurations</span>
+                </div><!--//item-->                         
+
+                <div class="item">
                     <span class="project-title"><a href="https://github.com/GaruGaru/today-garbage-impruneta">Today Garbage Impruneta</a></span> - <span class="project-tagline">App that show garbage removal schedule for the current day using firebase remote config</span>
                 </div><!--//item-->
 
@@ -161,9 +169,6 @@
                     <span class="project-title"><a href="http://github.com/GaruGaru/BeSiege">BeSiege</a></span> - <span class="project-tagline">Siege inspired http load tester written in Go</span>
                 </div><!--//item-->
 
-                <div class="item">
-                    <span class="project-title"><a href="http://github.com/GaruGaru/confy">Confy</a></span> - <span class="project-tagline">Easy, fluent, typesafe, container ready java configurations</span>
-                </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/GaruGaru/Rssy" target="_blank">Rssy</a></span> -
                     <span class="project-tagline">Java blazing fast, (kinda ugly), spark-based rss aggregator with redis as cache</span>
