Added music prefereneces

--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
                     <h2 class="heading">Favourite coding music</h2>
                     <div class="content">
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="#">Ut sollicitudin in mauris non auctor</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="#">Pearl Jam</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="#">Tycho</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="#">Protest the hero</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="#">If these trees could talk</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
