--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <h3 class="title"><a href="#">Portfolio</a>
                                 <span class="label label-theme">Open Source</span>
                             </h3>
-                            <p class="summary">This portfolio, served by nginx running on a 4 nodes <b>docker swarm</b> cluster hosted on <b>scaleway</b></p>
+                            <p class="summary">This portfolio, served by nginx running on a 4 nodes <b>docker swarm</b> cluster hosted on <b>scaleway</b> and continuous deployment by <b>codefresh.io<b> </b></b></p>
                             <p><a class="more-link"
                                   href="https://github.com/GaruGaru/Confy2"
                                   target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
