--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
                     <h2 class="heading">Favourite coding music</h2>
                     <div class="content">
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-headphones"></i> <a href="#">Pearl Jam</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="#">Tycho</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="#">Protest the hero</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="#">If these trees could talk</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=qM0zINtulhM">Pearl Jam</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=Z6ih1aKeETk">Tycho</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=9TYIdWK8lU8">Protest the hero</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=mzf7OR6-C8o">If these trees could talk</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
