Music band names CamelCase

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                             <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=qM0zINtulhM">Pearl Jam</a></li>
                             <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=Z6ih1aKeETk">Tycho</a></li>
                             <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=9TYIdWK8lU8">Protest the hero</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=mzf7OR6-C8o">If these trees could talk</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=mzf7OR6-C8o">If These Trees Could Talk</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
