Fixed projects: portfolio url

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </h3>
                             <p class="summary">This portfolio, served by nginx running on a 4 nodes <b>docker swarm</b> cluster hosted on <b>scaleway</b> and continuous deployment by <b>codefresh.io<b> </b></b></p>
                             <p><a class="more-link"
-                                  href="https://github.com/GaruGaru/Confy2"
+                                  href="https://github.com/GaruGaru/portfolio"
                                   target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
                         </div><!--//item-->
 
