Updated profile intro

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                     <h2 class="heading">About Me</h2>
                     <div class="content">
 
-                        <p>Professional Backend and Android developer, deep knowledge and understanding of full mobile and
-                            software development life cycles, UI, Clean Architecture and Agile methodologies.</p>
+                        <p>Professional Backend and Android developer, deep knowledge and understanding of software development clean architecture and agile methodologies, experience with development and architecture of fault tolerant real time systems, microservices and big data solutions.</p>
 
                     </div><!--//content-->
                 </div><!--//section-inner-->
