--- a/index.html
+++ b/index.html
@@ -82,11 +82,16 @@
                             <h3 class="title">Backend Developer - <span class="place"><a
                                     href="http://instal.com/">Instal</a></span> <span class="year">(2016 - Present)</span></h3>
 
-                            <p>In Instal i've worked as an android developer, my work was focused mainly on the proprietary <b>sdk development</b></p>
+                            <p>In Instal I've worked as an android developer, my work was focused mainly on the proprietary <b>sdk development</b></p>
 
-                            <p>As Java Developer i've worked with <b>apache storm</b> and <b>google dataflow</b> with <b>hadoop</b> in order to archive high performance real data processing</p>
+                            <p>
+                                As Backend Developer I've worked with <b>apache storm</b> and <b>google dataflow</b> with <b>hadoop</b> in order to archive
+                                high performance real data processing, I've also contributed to the microservices-based architecture by developing
+                                scalable and fault tolerant services using <b>python</b> with <b>tornado</b> and golang with <b>gingonic.</b>
+                            </p>
 
-                            <p>During my experience in Instal i've gained experience also with the devops stack working with <b>Chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system in the <b>GCE</b> environment.</p>
+
+                            <p>During my experience in Instal I've gained experience also with the devops stack working with <b>Chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system in the <b>GCE</b> environment.</p>
 
                         </div><!--//item-->
                         <div class="item">
