Updated work description

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <p>
                                 As Backend Developer I've worked with <b>apache storm</b> and <b>google dataflow</b> with <b>hadoop</b> in order to archive
                                 high performance real data processing, I've also contributed to the microservices-based architecture by developing
-                                scalable and fault tolerant services using <b>python</b> with <b>tornado</b> and golang with <b>gingonic.</b>
+                                scalable and fault tolerant services using <b>python</b> with <b>tornado</b> and <b>golang</b> with <b>gingonic.</b>
                             </p>
 
 
