Added tao to projects

--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
                                   target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
                         </div><!--//item-->
 
+                     <div class="item">
+                            <h3 class="title"><a href="#">Tao</a>
+                                <span class="label label-theme">Open Source</span>
+                                <span class="label label-lang-go">Go</span> 
+                            </h3>
+                            <p class="summary">Fast, scalable, events aggregator for coderdojo</p>
+                            <p><a class="more-link"
+                                  href="https://github.com/GaruGaru/Tao"
+                                  target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
+                        </div><!--//item-->
+
                         <div class="item">
                             <h3 class="title"><a href="#">Confy</a>
                                 <span class="label label-theme">Open Source</span>
