--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             </h3>
                             <p class="summary">This portfolio, served by nginx running on a 4 nodes <b>docker swarm</b> cluster hosted on <b>scaleway</b> and continuous deployment by <b>codefresh.io<b> </b></b></p>
                             <p><a class="more-link" href="https://github.com/GaruGaru/portfolio" target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
-                            <p><a class="more-link" href="https://docker.garu.pizza/" target="_blank"><i class="fa fa-external-link"></i>Docker Visualizer</a></p>
+                            <p><a class="more-link" href="https://docker.garu.io/" target="_blank"><i class="fa fa-external-link"></i>Docker Visualizer</a></p>
                         </div><!--//item-->
 
                      <div class="item">
@@ -206,7 +206,7 @@
                             <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                     href="mailto: garuglieritommaso@gmail.com">garuglieritommaso@gmail.com</a></li>
                             <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a
-                                    href="https://garu.pizza/">https://garu.pizza/</a></li>
+                                    href="https://garu.io/">https://garu.io/</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
