personal projects cleanup, removed k8 deployment step

--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
                             <p><a class="more-link" href="https://docker.garu.io/" target="_blank"><i class="fa fa-external-link"></i>Docker Visualizer</a></p>
                         </div><!--//item-->
 
+                         <div class="item">
+                            <h3 class="title"><a href="#">Warden</a>
+                                <span class="label label-theme">Open Source</span>
+                                <span class="label label-lang-go">Go</span> 
+                            </h3>
+                            <p class="summary">Lightweight, container native host monitor</p>
+                            <p><a class="more-link"
+                                  href="https://github.com/GaruGaru/Warden"
+                                  target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
+                        </div><!--//item-->
+
+
                      <div class="item">
                             <h3 class="title"><a href="#">Tao</a>
                                 <span class="label label-theme">Open Source</span>
@@ -142,39 +154,7 @@
                                   href="https://github.com/GaruGaru/Confy2"
                                   target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
                         </div><!--//item-->
-
-                        <div class="item">
-                            <h3 class="title"><a href="#">BeSiege</a>
-                                <span class="label label-theme">Open Source</span>
-                                <span class="label label-lang-go">Go</span>
-                            </h3>
-                            <p class="summary">Siege inspired http load tester written in Go</p>
-                            <p><a class="more-link"
-                                  href="http://github.com/GaruGaru/BeSiege"
-                                  target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
-                        </div><!--//item-->
-
-                        <div class="item">
-                            <h3 class="title"><a href="#">Coderdojo Events Backend</a>
-                                <span class="label label-theme">Open Source</span>
-                                <span class="label label-lang-kotlin">Kotlin</span>
-                            </h3>
-                            <p class="summary">Fast, parallel, container ready aggregator for coderdojo events app written in Kotlin</p>
-                            <p><a class="more-link"
-                                  href="https://github.com/GaruGaru/coderdojo-app-backend"
-                                  target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
-                        </div><!--//item-->
-
-                        <div class="item">
-                            <h3 class="title"><a href="#">Fail2Statsd</a>
-                                <span class="label label-theme">Open Source</span>
-                                <span class="label label-lang-go">Go</span>
-                            </h3>
-                            <p class="summary">Dockerized, lightweight, swarm-ready fail2ban log monitor for statsd written in Golang</p>
-                            <p><a class="more-link"
-                                  href="http://github.com/GaruGaru/BeSiege"
-                                  target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
-                        </div><!--//item-->
+ 
 
                         <div class="item">
                             <h3 class="title"><a href="#">Piove domani ad Impruneta?</a>
