Removed website link2

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <!-- ******HEADER****** -->
 <header class="header">
     <div class="container">
-        <img class="profile-image img-responsive pull-left" src="assets/images/profile/profile.jpg" alt="Tommaso Garuglieri"/>
+        <img class="profile-image img-responsive pull-left" src="assets/images/profile/profile.jpg"
+             alt="Tommaso Garuglieri"/>
         <div class="profile-content pull-left">
             <h1 class="name">Tommaso Garuglieri</h1>
             <h2 class="desc">Backend & Android Developer</h2>
@@ -59,7 +60,9 @@
                     <h2 class="heading">About Me</h2>
                     <div class="content">
 
-                        <p>Professional Backend and Android developer, deep knowledge and understanding of software development clean architecture and agile methodologies, experience with development and architecture of fault tolerant real time systems, microservices and big data solutions.</p>
+                        <p>Professional Backend and Android developer, deep knowledge and understanding of software
+                            development clean architecture and agile methodologies, experience with development and
+                            architecture of fault tolerant real time systems, microservices and big data solutions.</p>
 
                     </div><!--//content-->
                 </div><!--//section-inner-->
@@ -72,25 +75,35 @@
                     <div class="content">
                         <div class="item">
                             <h3 class="title">Backend Developer - <span class="place"><a
-                                    href="http://instal.com/">Instal</a></span> <span class="year">(2016 - Present)</span></h3>
+                                    href="http://instal.com/">Instal</a></span> <span
+                                    class="year">(2016 - Present)</span></h3>
 
-                            <p>In Instal I've worked as an android developer, my work was focused mainly on the proprietary <b>sdk development</b></p>
+                            <p>In Instal I've worked as an android developer, my work was focused mainly on the
+                                proprietary <b>sdk development</b></p>
 
                             <p>
-                                As Backend Developer I've worked with <b>apache storm</b> and <b>google dataflow</b> with <b>hadoop</b> in order to archive
-                                high performance real data processing, I've also contributed to the microservices-based architecture by developing
-                                scalable and fault tolerant services using <b>python</b> with <b>tornado</b> and <b>golang</b> with <b>gingonic.</b>
+                                As Backend Developer I've worked with <b>apache storm</b> and <b>google dataflow</b>
+                                with <b>hadoop</b> in order to archive
+                                high performance real data processing, I've also contributed to the microservices-based
+                                architecture by developing
+                                scalable and fault tolerant services using <b>python</b> with <b>tornado</b> and <b>golang</b>
+                                with <b>gingonic.</b>
                             </p>
 
 
-                            <p>During my experience in Instal I've gained experience also with the devops stack working with <b>Chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b> for production container orchestration and <b>Sensu</b> for monitoring and alerting system in the <b>GCE</b> environment.</p>
+                            <p>During my experience in Instal I've gained experience also with the devops stack working
+                                with <b>Chef</b> (infrastructure as code), <b>Docker</b> (container engine), <b>Kubernetes</b>
+                                for production container orchestration and <b>Sensu</b> for monitoring and alerting
+                                system in the <b>GCE</b> environment.</p>
 
                         </div><!--//item-->
                         <div class="item">
-                            <h3 class="title">Android Course Teacher - <span class="place"><a href="http://www.gobettivolta.gov.it/">IIS Gobetti Volta</a></span>
+                            <h3 class="title">Android Course Teacher - <span class="place"><a
+                                    href="http://www.gobettivolta.gov.it/">IIS Gobetti Volta</a></span>
                                 <span class="year">(2015 - Present)</span></h3>
 
-                            <p>Teacher in a free android developing course for high school students hosted by IIS Gobetti Volta</p>
+                            <p>Teacher in a free android developing course for high school students hosted by IIS
+                                Gobetti Volta</p>
 
                         </div><!--//item-->
 
@@ -108,15 +121,19 @@
                             <h3 class="title"><a href="#">Portfolio</a>
                                 <span class="label label-theme">Open Source</span>
                             </h3>
-                            <p class="summary">This portfolio, served by nginx running on a 4 nodes <b>docker swarm</b> cluster hosted on <b>scaleway</b> and continuous deployment by <b>codefresh.io<b> </b></b></p>
-                            <p><a class="more-link" href="https://github.com/GaruGaru/portfolio" target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
-                            <p><a class="more-link" href="https://docker.garu.io/" target="_blank"><i class="fa fa-external-link"></i>Docker Visualizer</a></p>
+                            <p class="summary">This portfolio, served by nginx running on a 4 nodes <b>docker swarm</b>
+                                cluster hosted on <b>scaleway</b> and continuous deployment by
+                                <b>codefresh.io<b> </b></b></p>
+                            <p><a class="more-link" href="https://github.com/GaruGaru/portfolio" target="_blank"><i
+                                    class="fa fa-external-link"></i>View on GitHub</a></p>
+                            <p><a class="more-link" href="https://docker.garu.io/" target="_blank"><i
+                                    class="fa fa-external-link"></i>Docker Visualizer</a></p>
                         </div><!--//item-->
 
-                         <div class="item">
+                        <div class="item">
                             <h3 class="title"><a href="#">Warden</a>
                                 <span class="label label-theme">Open Source</span>
-                                <span class="label label-lang-go">Go</span> 
+                                <span class="label label-lang-go">Go</span>
                             </h3>
                             <p class="summary">Lightweight, container native host monitor</p>
                             <p><a class="more-link"
@@ -125,10 +142,10 @@
                         </div><!--//item-->
 
 
-                     <div class="item">
+                        <div class="item">
                             <h3 class="title"><a href="#">Tao</a>
                                 <span class="label label-theme">Open Source</span>
-                                <span class="label label-lang-go">Go</span> 
+                                <span class="label label-lang-go">Go</span>
                             </h3>
                             <p class="summary">Fast, scalable, events aggregator for coderdojo</p>
                             <p><a class="more-link"
@@ -146,7 +163,7 @@
                                   href="https://github.com/GaruGaru/Confy2"
                                   target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
                         </div><!--//item-->
- 
+
 
                         <div class="item">
                             <h3 class="title"><a href="#">Piove domani ad Impruneta?</a>
@@ -154,13 +171,15 @@
                                 <span class="label label-lang-java">Java</span>
                                 <span class="label label-lang-android">Android</span>
                             </h3>
-                            <p class="summary">Minimal and.. very specific weather android app with Dagger2, RxJava2, Retrofit and MVP architecture</p>
+                            <p class="summary">Minimal and.. very specific weather android app with Dagger2, RxJava2,
+                                Retrofit and MVP architecture</p>
                             <p><a class="more-link"
                                   href="https://github.com/GaruGaru/PioveDomaniAdImpruneta"
                                   target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                         </div><!--//item-->
 
-                        <a class="btn btn-cta-secondary" href="https://github.com/GaruGaru/">More on GitHub <i class="fa fa-chevron-right"></i></a>
+                        <a class="btn btn-cta-secondary" href="https://github.com/GaruGaru/">More on GitHub <i
+                                class="fa fa-chevron-right"></i></a>
 
                     </div><!--//content-->
                 </div><!--//section-inner-->
@@ -177,8 +196,6 @@
                             <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Florence, IT</li>
                             <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                     href="mailto: garuglieritommaso@gmail.com">garuglieritommaso@gmail.com</a></li>
-                            <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a
-                                    href="https://garu.io/">https://garu.io/</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
@@ -186,21 +203,10 @@
 
             <aside class="skills aside section">
                 <div class="section-inner">
-                    <h2 class="heading">Skills</h2>
+                    <h2 class="heading">Languages</h2>
                     <div class="content">
                         <p class="intro">
                         <div class="skillset">
-
-                            <div class="item">
-                                <h3 class="level-title">Android<span class="level-label" data-toggle="tooltip"
-                                                                     data-placement="left" data-animation="true"
-                                                                     title="You can use the tooltip to add more info...">Expert</span>
-                                </h3>
-                                <div class="level-bar">
-                                    <div class="level-bar-inner" data-level="96%">
-                                    </div>
-                                </div><!--//level-bar-->
-                            </div><!--//item-->
 
                             <div class="item">
                                 <h3 class="level-title">Java<span class="level-label">Expert</span></h3>
@@ -213,15 +219,24 @@
                             <div class="item">
                                 <h3 class="level-title">Kotlin<span class="level-label">Proficient</span></h3>
                                 <div class="level-bar">
-                                    <div class="level-bar-inner" data-level="75%">
+                                    <div class="level-bar-inner" data-level="85%">
                                     </div>
                                 </div><!--//level-bar-->
                             </div><!--//item-->
 
                             <div class="item">
+                                <h3 class="level-title">Python<span class="level-label">Proficient</span></h3>
+                                <div class="level-bar">
+                                    <div class="level-bar-inner" data-level="70%">
+                                    </div>
+                                </div><!--//level-bar-->
+                            </div><!--//item-->
+
+
+                            <div class="item">
                                 <h3 class="level-title">GoLang<span class="level-label">Beginner</span></h3>
                                 <div class="level-bar">
-                                    <div class="level-bar-inner" data-level="55%">
+                                    <div class="level-bar-inner" data-level="60%">
                                     </div>
                                 </div><!--//level-bar-->
                             </div><!--//item-->
@@ -274,10 +289,14 @@
                     <h2 class="heading">Favourite coding music</h2>
                     <div class="content">
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=qM0zINtulhM">Pearl Jam</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=Z6ih1aKeETk">Tycho</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=9TYIdWK8lU8">Protest the hero</a></li>
-                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=mzf7OR6-C8o">If These Trees Could Talk</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=qM0zINtulhM">Pearl
+                                Jam</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=Z6ih1aKeETk">Tycho</a>
+                            </li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=9TYIdWK8lU8">Protest
+                                the hero</a></li>
+                            <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=mzf7OR6-C8o">If
+                                These Trees Could Talk</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
@@ -291,7 +310,8 @@
 <footer class="footer">
     <div class="container text-center">
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-        <small class="copyright">Base theme: <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+        <small class="copyright">Base theme: <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a>
+        </small>
     </div><!--//container-->
 </footer><!--//footer-->
 
